// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render shift-details-popup With a couple of shift details objects provided 1`] = `
<div>
  <ShiftDetailsPopup
    shiftDetails={
      Object {
        "1": Object {
          "canApproveOwnDutySetting": false,
          "canEditDutySettings": true,
          "dutyOnHolidays": false,
          "dutyOnWeekends": false,
          "endDate": 2019-02-14T21:00:00.000Z,
          "getRef": [Function],
          "isApproved": false,
          "isVisible": true,
          "onMouseEnter": [Function],
          "onMouseLeave": [Function],
          "onOpenShiftEditClick": [Function],
          "person": Object {
            "login": "john.doe",
            "name": "John Doe",
            "vteams": Array [],
          },
          "replacements": Array [],
          "requesterInDuty": false,
          "scheduleId": 1,
          "startDate": 2019-01-31T21:00:00.000Z,
          "user": Object {},
        },
        "2": Object {
          "canApproveOwnDutySetting": false,
          "canEditDutySettings": true,
          "dutyOnHolidays": false,
          "dutyOnWeekends": false,
          "endDate": 2019-02-14T21:00:00.000Z,
          "getRef": [Function],
          "isApproved": false,
          "isVisible": true,
          "onMouseEnter": [Function],
          "onMouseLeave": [Function],
          "onOpenShiftEditClick": [Function],
          "person": Object {
            "login": "dave.due",
            "name": "Dave Due",
            "vteams": Array [],
          },
          "replacements": Array [],
          "requesterInDuty": false,
          "scheduleId": 1,
          "startDate": 2019-01-31T21:00:00.000Z,
          "user": Object {},
        },
      }
    }
    storedApprovedFlags={Object {}}
  />
</div>
`;

exports[`Should render shift-details-popup With a single non-visible shift details object provided 1`] = `
<Fragment>
  <SimpleComposeWrapper [theme:normal],[view:default]
    boundary={
      Object {
        "current": <body
          class="utilityfocus"
        />,
      }
    }
    className="DutyCalendarGrid-ShiftDetailsPopup"
    direction={
      Array [
        "bottom-start",
        "top-start",
        "left-start",
        "left-end",
      ]
    }
    key="shift-details-1"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    target="anchor"
    theme="normal"
    view="default"
    visible={false}
  >
    <abc-duty-details
      canApproveOwnDutySetting={false}
      canEditDutySettings={true}
      dutyOnHolidays={false}
      dutyOnWeekends={false}
      dutyShiftId={1}
      endDate={2019-02-14T21:00:00.000Z}
      isApproved={false}
      onOpenShiftEditClick={[Function]}
      person={
        Object {
          "login": "john.doe",
          "name": "John Doe",
          "vteams": Array [],
        }
      }
      replacements={Array []}
      requesterInDuty={false}
      scheduleId={1}
      startDate={2019-01-31T21:00:00.000Z}
      user={Object {}}
    />
  </SimpleComposeWrapper [theme:normal],[view:default]>
</Fragment>
`;

exports[`Should render shift-details-popup With a single shift details object provided 1`] = `
<Fragment>
  <SimpleComposeWrapper [theme:normal],[view:default]
    boundary={
      Object {
        "current": <body
          class="utilityfocus"
        />,
      }
    }
    className="DutyCalendarGrid-ShiftDetailsPopup"
    direction={
      Array [
        "bottom-start",
        "top-start",
        "left-start",
        "left-end",
      ]
    }
    key="shift-details-1"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    target="anchor"
    theme="normal"
    view="default"
    visible={true}
  >
    <abc-duty-details
      canApproveOwnDutySetting={false}
      canEditDutySettings={true}
      dutyOnHolidays={false}
      dutyOnWeekends={false}
      dutyShiftId={1}
      endDate={2019-02-14T21:00:00.000Z}
      isApproved={false}
      onOpenShiftEditClick={[Function]}
      person={
        Object {
          "login": "john.doe",
          "name": "John Doe",
          "vteams": Array [],
        }
      }
      replacements={Array []}
      requesterInDuty={false}
      scheduleId={1}
      startDate={2019-01-31T21:00:00.000Z}
      user={Object {}}
    />
  </SimpleComposeWrapper [theme:normal],[view:default]>
</Fragment>
`;

exports[`Should render shift-details-popup With no shift details provided 1`] = `
<div
  className="DutyCalendarGrid-ShiftDetailsPopup"
/>
`;
